completed api call for image and fruit data

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <section id="fruitSection">
         <ul id="fruitList"></ul>
     </section>
-    <section id="nutritionSection"></section>
+    <section id="nutritionSection">
+        <h3>Total Calories: <span id="calorieCount"></span></h3>
+    </section>
 </body>
 </html>
