--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script defer src="bundle.js"></script>
+    <script defer src="script.js"></script>
     <title>Fruit Salad</title>
 </head>
 <body>
