add create and delete fruit inputs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             <input type="submit" value="submit">
         </form>
     </section>
+    <section id="createFruit">
+        <form id="createForm">
+            <label for="createInput">Name a fruit to add</label>
+            <input type="text" id="createInput">
+            <input type="submit" value="submit">
+        </form>
+    </section>
+    <section id="deleteFruit">
+        <form id="deleteForm">
+            <label for="deleteInput">Name a fruit to delete</label>
+            <input type="text" id="deleteInput">
+            <input type="submit" value="submit">
+        </form>
+    </section>
     <section id="fruitSection">
         <ul id="fruitList"></ul>
     </section>
